kubernetes/apps/longhorn/longhorn-system/app/referencegrant-for-default.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: longhorn-service-access-from-default
  namespace: longhorn-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: default
  to:
    - group: ""
      kind: Service
