kubernetes/apps/longhorn/longhorn-system/app/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: longhorn-gateway-access
  namespace: kube-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: longhorn-system
  to:
    - group: gateway.networking.k8s.io
      kind: Gateway
