kubernetes/apps/longhorn/longhorn-system/app/httproute-standalone.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui-standalone
  namespace: default
spec:
  hostnames:
    - longhorn2.kalde.in
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: echo
          namespace: default
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
